--- a/ominicontrol_jupyter.ipynb
+++ b/ominicontrol_jupyter.ipynb
@@ -47,6 +47,18 @@
     "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/black-forest-labs/FLUX.1-schnell/raw/main/vae/config.json -d /content/model/vae -o config.json\n",
     "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/black-forest-labs/FLUX.1-schnell/resolve/main/vae/diffusion_pytorch_model.safetensors -d /content/model/vae -o diffusion_pytorch_model.safetensors\n",
     "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/black-forest-labs/FLUX.1-schnell/raw/main/model_index.json -d /content/model -o model_index.json\n",
+    "\n",
+    "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/mcmonkey/google_t5-v1_1-xxl_encoderonly/raw/main/config.json -d /content/clip -o config.json\n",
+    "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/mcmonkey/google_t5-v1_1-xxl_encoderonly/raw/main/generation_config.json -d /content/clip -o generation_config.json\n",
+    "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/mcmonkey/google_t5-v1_1-xxl_encoderonly/resolve/main/model.safetensors -d /content/clip -o model.safetensors\n",
+    "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/mcmonkey/google_t5-v1_1-xxl_encoderonly/raw/main/special_tokens_map.json -d /content/clip -o special_tokens_map.json\n",
+    "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/mcmonkey/google_t5-v1_1-xxl_encoderonly/resolve/main/spiece.model -d /content/clip -o spiece.model\n",
+    "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/mcmonkey/google_t5-v1_1-xxl_encoderonly/raw/main/tokenizer_config.json -d /content/clip -o tokenizer_config.json\n",
+    "\n",
+    "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/camenduru/FLUX.1-schnell-quantize/resolve/main/text_encoder.pt -d /content/8bit -o text_encoder.pt\n",
+    "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/camenduru/FLUX.1-schnell-quantize/resolve/main/transformer.pt -d /content/8bit -o transformer.pt\n",
+    "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/camenduru/FLUX.1-schnell-quantize/resolve/main/vae.pt -d /content/8bit -o vae.pt\n",
+    "\n",
     "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/Yuanshi/OminiControl/resolve/main/omini/subject_512.safetensors -d /content/lora -o subject_512.safetensors\n",
     "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://files.catbox.moe/o5xi83.webp -d /content -o test.webp"
    ]
@@ -75,16 +87,23 @@
     "    dtype = torch.bfloat16\n",
     "    model = \"/content/model\"\n",
     "    scheduler = FlowMatchEulerDiscreteScheduler.from_pretrained(model, subfolder=\"scheduler\")\n",
-    "    text_encoder = CLIPTextModel.from_pretrained(model, subfolder=\"text_encoder\", torch_dtype=dtype)\n",
     "    tokenizer = CLIPTokenizer.from_pretrained(model, subfolder=\"tokenizer\", torch_dtype=dtype)\n",
-    "    text_encoder_2 = T5EncoderModel.from_pretrained(model, subfolder=\"text_encoder_2\", torch_dtype=dtype)\n",
     "    tokenizer_2 = T5TokenizerFast.from_pretrained(model, subfolder=\"tokenizer_2\", torch_dtype=dtype)\n",
-    "    vae = AutoencoderKL.from_pretrained(model, subfolder=\"vae\", torch_dtype=dtype)\n",
-    "    transformer = FluxTransformer2DModel.from_pretrained(model, subfolder=\"transformer\", torch_dtype=dtype)\n",
-    "    quantize(transformer, weights=qfloat8, activations=qfloat8)\n",
-    "    freeze(transformer)\n",
-    "    pipe = FluxPipeline(scheduler=scheduler, text_encoder=text_encoder, tokenizer=tokenizer, text_encoder_2=text_encoder_2, tokenizer_2=tokenizer_2, vae=vae, transformer=None)\n",
+    "\n",
+    "    text_encoder = torch.load('/content/8bit/text_encoder.pt')\n",
+    "    text_encoder.eval()\n",
+    "    text_encoder_2 = T5EncoderModel.from_pretrained(\"/content/clip\", torch_dtype=dtype)\n",
+    "    text_encoder_2.eval()\n",
+    "    transformer = torch.load('/content/8bit/transformer.pt')\n",
+    "    transformer.eval()\n",
+    "    vae = torch.load('/content/8bit/vae.pt')\n",
+    "    vae.eval()\n",
+    "\n",
+    "    pipe = FluxPipeline(scheduler=scheduler, tokenizer=tokenizer, tokenizer_2=tokenizer_2, text_encoder=None, text_encoder_2=None, transformer=None, vae=None)\n",
+    "    pipe.text_encoder = text_encoder\n",
+    "    pipe.text_encoder_2 = text_encoder_2\n",
     "    pipe.transformer = transformer\n",
+    "    pipe.vae = vae\n",
     "    pipe.load_lora_weights(\"/content/lora\", weight_name=f\"subject_512.safetensors\", adapter_name=\"subject\",)\n",
     "    pipe.to('cuda')"
    ]
